@@ -4941,7 +4941,6 @@ Dieser Teil der Tabelle listet die Unterstützung für das Management der Arbeit
   <block id="d46543c7114457c380d6e75a76c470af" category="paragraph">Abonnieren Sie NetApp Intelligent Services über den Marktplatz Ihres Cloud-Anbieters, um Datendienste stundenweise (PAYGO) oder über einen Jahresvertrag zu bezahlen. Wenn Sie eine Lizenz von NetApp (BYOL) erworben haben, müssen Sie auch das Marketplace-Angebot abonnieren. Ihre Lizenz wird immer zuerst berechnet, aber Sie werden mit dem Stundensatz belastet, wenn Sie Ihre lizenzierte Kapazität überschreiten oder wenn die Laufzeit der Lizenz abläuft.</block>
   <block id="e9bf07011be1831466ac0bf1bbfe1140" category="doc">Konnektor 3.9.53</block>
   <block id="734a861d3d201b7a4e47067ddb5a7339" category="paragraph">Diese Version des BlueXP Connector enthält Sicherheitsverbesserungen und Fehlerbehebungen.</block>
-  <block id="216b28cad63bed5c978cb116067bfc38" category="paragraph">Derzeit ist die Version 3.9.53 für den Standardmodus und den eingeschränkten Modus verfügbar.</block>
   <block id="2519e52723b63d73b91fe9567002e2ad" category="section-title">Multi-Faktor-Authentifizierung (MFA)</block>
   <block id="9950fd493db1cd52e6769f96bf27cc78" category="inline-link-macro">Erfahren Sie, wie Sie die Multi-Faktor-Authentifizierung selbst einrichten.</block>
   <block id="35084d885dea7b061e6894c1cf3036d9" category="section-title">Workloads</block>
@@ -5213,4 +5212,11 @@ Dieser Teil der Tabelle listet die Unterstützung für das Management der Arbeit
   <block id="1a504cebc3822fd967eb6426a7ff0a31" category="cell">Multi-Faktor-Authentifizierung</block>
   <block id="812dbc1b1f1c0d72bc2c50e8ea107ab8" category="cell">Verfügbar für lokale Benutzer</block>
   <block id="2d25c72c1b18e562f6654fff8e11711e" category="cell">Nicht verfügbar</block>
+  <block id="33eba214b6723fe54975309f2fc419fe" category="paragraph">Die Version 3.9.53 ist für den Standardmodus und den eingeschränkten Modus verfügbar.</block>
+  <block id="39615b94cc2fe576502275ed459d404b" category="section-title">Warnmeldungen zur Speicherplatznutzung</block>
+  <block id="0b6d76bd9d461e2dc31436ce64d71b70" category="paragraph">Das Benachrichtigungscenter enthält jetzt Warnungen zur Speicherplatznutzung auf dem Connector. <block ref="f731d1927408fd2f4c1db9e73951a633" category="inline-link-macro-rx"></block></block>
+  <block id="797f681b34046f4455905e56cb5d8cd4" category="section-title">Überwachen des Speicherplatzes</block>
+  <block id="373df0df4c9bf458b635c60e6bd81875" category="inline-link-macro">Lesen Sie den NetApp Knowledge Base-Artikel</block>
+  <block id="2b081e4d7f5e73b0295cc7f384e9ef53" category="paragraph">BlueXP benachrichtigt Sie, wenn der Speicherplatz der Connector-VM knapp wird. Überwachen Sie diese Benachrichtigungen im Benachrichtigungscenter oder konfigurieren Sie E-Mail-Benachrichtigungen. Die Behebung von Speicherplatzproblemen liegt in Ihrer Verantwortung. <block ref="2f3ae1328a4e13fb2f2d9aa6f559f827" category="inline-link-macro-rx"></block>.</block>
+  <block id="b76919d8a6dd33b62b49a16ab1b560aa" category="paragraph"><block ref="b76919d8a6dd33b62b49a16ab1b560aa" category="inline-link-macro-rx"></block></block>
 </blocks>
